--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,13 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^5.2.3",
     "graphql": "^15.4.0",
+    "http-server": "^14.1.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
