--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "babel": "^6.23.0",
     "jsonwebtoken": "^9.0.1",
     "serve": "^14.2.0"
   }
