--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "apollo-server-express": "^2.15.0",
     "jsonwebtoken": "^9.0.1",
     "serve": "^14.2.0"
   }
